fix:overflow-hiddenを追加し、画面の下に出来た余分なスペースを削除

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,6 +4,11 @@
 
 html { scroll-behavior: smooth;}
 
+body, html {
+    margin: 0;
+    padding: 0;
+}
+
 /*opening.blade.php*/
 
 /*文字のフェードイン*/
